# TinyGL-SDL2

./: CMakeLists.txt
examples/: CMakeLists.txt  gears.c  glu.c  mech.c  spin.c  texobj.c  triangle.c  ui.h  ui_sdl.c
src/: CMakeLists.txt  zgl.h
